[gd_scene load_steps=3 format=3 uid="uid://dtr83cwyjumv3"]

[ext_resource type="Theme" uid="uid://1j0qm0ylmms6" path="res://resources/default_theme.tres" id="1_hrn0q"]
[ext_resource type="Script" path="res://pause/pause_menu.gd" id="2_ww0tk"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hrn0q")
script = ExtResource("2_ww0tk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="PausedLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "PAUSE_MENU_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveAndExitButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSE_MENU_SAVE"

[node name="ContinueButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSE_MENU_CONTINUE"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/VBoxContainer/SaveAndExitButton" to="." method="_on_save_and_exit_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
